--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="external-container external-container--header">
-  <div class="internal-container internal-container--header">
+<header class="main-header">
+  <div class="container container--header">
     <h1 class="visually-hidden">Дизайн-студия Nёrds</h1>
     <div class="main-header-nav-container">
       <nav class="main-header-nav">
@@ -33,30 +33,24 @@
       Насколько я понимаю, использование "visually-hidden"+JS тоже вполне рабочая схема - просто меняем класс у лишки. Поэтому пока решил оставить так. -->
       <ul class="slider__list">
         <li class="slider__item slider__item--first-slide">
-          <div class="slider-item">
-            <p class="slider__slogan slider__slogan--first-slide">Долго, дорого, скрупулезно</p>
-            <p class="slider__plain-text slider__plain-text--first-slide">Математически выверенный дизайн для вашего
-              сайта или мобильного приложения.</p>
-            <a class="button slider__button button--red" href="#">Узнать больше</a>
-          </div>
+          <p class="slider__slogan slider__slogan--first-slide">Долго, дорого, скрупулезно</p>
+          <p class="slider__plain-text slider__plain-text--first-slide">Математически выверенный дизайн для вашего
+            сайта или мобильного приложения.</p>
+          <a class="button slider__button button--red" href="#">Узнать больше</a>
         </li>
         <li class="slider__item slider__item--second-slide visually-hidden">
-          <div class="slider-item">
-            <p class="slider__slogan slider__slogan--second-slide">Любим математику как никто другой</p>
-            <p class="slider__plain-text slider__plain-text--second-slide">Никакого креатива, только математические
-              формулы для расчета идеальных
-              пропорций.</p>
-            <a class="button slider__button button--red" href="#">Узнать больше</a>
-          </div>
+          <p class="slider__slogan slider__slogan--second-slide">Любим математику как никто другой</p>
+          <p class="slider__plain-text slider__plain-text--second-slide">Никакого креатива, только математические
+            формулы для расчета идеальных
+            пропорций.</p>
+          <a class="button slider__button button--red" href="#">Узнать больше</a>
         </li>
         <li class="slider__item slider__item--third-slide visually-hidden">
-          <div class="slider-item__content">
-            <p class="slider__slogan slider__slogan--third-slide">Только ночь, только хардкор</p>
-            <p class="slider__plain-text slider__plain-text--third-slide">Работать днем, как все? Мы против этого. Ближе
-              к полуночи работа только
-              начинается.</p>
-            <a class="button slider__button button--red" href="#">Узнать больше</a>
-          </div>
+          <p class="slider__slogan slider__slogan--third-slide">Только ночь, только хардкор</p>
+          <p class="slider__plain-text slider__plain-text--third-slide">Работать днем, как все? Мы против этого. Ближе
+            к полуночи работа только
+            начинается.</p>
+          <a class="button slider__button button--red" href="#">Узнать больше</a>
         </li>
       </ul>
       <!-- TODO Нужен ли тут aria-label? Т.к. текста на кнопке нет -->
@@ -75,114 +69,113 @@
     </section>
   </div>
 </header>
-<main class="external-container external-container--main">
-  <div class="internal-container internal-container--main">
-    <section class="services">
-      <h2 class="visually-hidden">Типы услуг</h2>
-      <ul class="services__list">
-        <li class="services__item">
-          <img class="services__icon" src="img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
-          <h3 class="services__title">Веб-сайты</h3>
-          <p class="services__plain-text services__plain-text--web">Мир никогда не будет прежним после того как увидит
-            ваш сайт!</p>
-          <a class="button services__button button--red" href="#">Заказать</a>
+<main class="main">
+  <section class="services">
+    <h2 class="visually-hidden">Типы услуг</h2>
+    <ul class="services__list">
+      <li class="services__item">
+        <img class="services__icon" src="img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
+        <h3 class="services__title">Веб-сайты</h3>
+        <p class="services__plain-text services__plain-text--web">Мир никогда не будет прежним после того как увидит
+          ваш сайт!</p>
+        <a class="button services__button button--red" href="#">Заказать</a>
+      </li>
+      <li class="services__item">
+        <img class="services__icon" src="img/illustration-2.jpg" width="300" height="146" alt="Мобильные приложения">
+        <h3 class="services__title">Приложения</h3>
+        <p class="services__plain-text services__plain-text--soft">Покорите топ-10 приложений в AppStore и Google
+          Play</p>
+        <a class="button services__button button--green" href="#">Заказать</a>
+      </li>
+      <li class="services__item">
+        <img class="services__icon" src="img/illustration-3.jpg" width="300" height="146" alt="Презентации">
+        <h3 class="services__title">Презентации</h3>
+        <p class="services__plain-text services__plain-text--presentation">Вы даже не подозреваете, насколько вы
+          изумительны!</p>
+        <a class="button services__button button--yellow" href="#">Заказать</a>
+      </li>
+    </ul>
+  </section>
+  <section class="about-company">
+    <h2 class="visually-hidden">О нас</h2>
+    <div class="about-company__left-part">
+      <p class="about-company__slogan ">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+      <p class="about-company__plain-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+        превыше креатива. Работаем не покладая
+        рук, как роботы.</p>
+      <p class="about-company__subtitle about-company__subtitle--lpart">Выполняем заказы на разработку:</p>
+      <ul class="about-company__lpart-list">
+        <li class="about-company__lpart-item">Веб-сайтов любой сложности</li>
+        <li class="about-company__lpart-item">Мобильных приложений для iOS и Android</li>
+        <li class="about-company__lpart-item">Слайдшоу и видео для корпоративных презентаций</li>
+      </ul>
+    </div>
+    <div class="about-company__right-part">
+      <img class="about-company__nerds-img" src="img/studio-nerds.png" width="360" height="208"
+           alt="Дизайн-студия Nerds">
+      <p class="about-company__subtitle about-company__subtitle--rpart centered">с 2004 года Любим точность во
+        всем:</p>
+      <ul class="about-company__rpart-list">
+        <li class="about-company__rpart-item">
+          <b class="about-company__percents centered">146<sup>%</sup></b>
+          <p class="about-company__percents-text">Уровень самоотдачи</p>
         </li>
-        <li class="services__item">
-          <img class="services__icon" src="img/illustration-2.jpg" width="300" height="146" alt="Мобильные приложения">
-          <h3 class="services__title">Приложения</h3>
-          <p class="services__plain-text services__plain-text--soft">Покорите топ-10 приложений в AppStore и Google
-            Play</p>
-          <a class="button services__button button--green" href="#">Заказать</a>
+        <li class="about-company__rpart-item">
+          <b class="about-company__percents centered">100<sup>%</sup></b>
+          <p class="about-company__percents-text">Соблюдение сроков</p>
         </li>
-        <li class="services__item">
-          <img class="services__icon" src="img/illustration-3.jpg" width="300" height="146" alt="Презентации">
-          <h3 class="services__title">Презентации</h3>
-          <p class="services__plain-text services__plain-text--presentation">Вы даже не подозреваете, насколько вы
-            изумительны!</p>
-          <a class="button services__button button--yellow" href="#">Заказать</a>
+        <li class="about-company__rpart-item">
+          <b class="about-company__percents centered">50<sup>%</sup></b>
+          <p class="about-company__percents-text">Минимальная предоплата</p>
         </li>
       </ul>
-    </section>
-    <section class="about-company">
-      <h2 class="visually-hidden">О нас</h2>
-      <div class="about-company__left-part">
-        <p class="about-company__slogan ">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
-        <p class="about-company__plain-text">Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-          превыше креатива. Работаем не покладая
-          рук, как роботы.</p>
-        <p class="about-company__subtitle about-company__subtitle--lpart">Выполняем заказы на разработку:</p>
-        <ul class="about-company__lpart-list">
-          <li class="about-company__lpart-item">Веб-сайтов любой сложности</li>
-          <li class="about-company__lpart-item">Мобильных приложений для iOS и Android</li>
-          <li class="about-company__lpart-item">Слайдшоу и видео для корпоративных презентаций</li>
-        </ul>
-      </div>
-      <div class="about-company__right-part">
-        <img class="about-company__nerds-img" src="img/studio-nerds.png" width="360" height="208"
-             alt="Дизайн-студия Nerds">
-        <p class="about-company__subtitle about-company__subtitle--rpart centered">с 2004 года Любим точность во
-          всем:</p>
-        <ul class="about-company__rpart-list">
-          <li class="about-company__rpart-item">
-            <b class="about-company__percents centered">146<sup>%</sup></b>
-            <p class="about-company__percents-text">Уровень самоотдачи</p>
-          </li>
-          <li class="about-company__rpart-item">
-            <b class="about-company__percents centered">100<sup>%</sup></b>
-            <p class="about-company__percents-text">Соблюдение сроков</p>
-          </li>
-          <li class="about-company__rpart-item">
-            <b class="about-company__percents centered">50<sup>%</sup></b>
-            <p class="about-company__percents-text">Минимальная предоплата</p>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <div class="internal-container">
-      <section class="partner-logo">
-        <h2 class="visually-hidden">Ссылки на партнерские сайты</h2>
-        <ul class="partner-logo__list">
-          <li class="partner-logo__item">
-            <a class="partner-logo__link" href="https://htmlacademy.ru/intensive/htmlcss">
-              <img class="partner-logo__pict" src="img/logo-1.png" width="199" height="68" alt="Сайт HTML Academy">
-            </a>
-          </li>
-          <li class="partner-logo__item">
-            <a class="partner-logo__link" href="#">
-              <img class="partner-logo__pict" src="img/logo-2.png" width="209" height="90"
-                   alt="Сайт Barbershop Borodinski">
-            </a>
-          </li>
-          <li class="partner-logo__item">
-            <a class="partner-logo__link" href="#">
-              <img class="partner-logo__pict" src="img/logo-3.png" width="185" height="52" alt="Сайт Pink">
-            </a>
-          </li>
-          <li class="partner-logo__item">
-            <a class="partner-logo__link" href="#">
-              <img class="partner-logo__pict" src="img/logo-4.png" width="173" height="84" alt="Сайт Mishka">
-            </a>
-          </li>
-        </ul>
-      </section>
     </div>
-    <section class="contacts">
-      <h2 class="visually-hidden">Как с нами связаться</h2>
-      <img class="contacts__map" src="img/map.jpg" width="1440" height="416"
-           alt="Адрес дизайн-студии 191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
-      <div class="contacts__requisites">
-        <p class="contacts__subtitle">NЁRDS DESIGN STUDIO</p>
-        <address class="contacts__address-text text--grey">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
-        <p class="contacts__tel-text text--grey">тел.&nbsp;<a class="contacts__tel text--grey"
-                                                              href="tel:+78122757575">+7
-          (812)
-          275-75-75</a></p>
-        <a class="button contacts__button button--red" href="#">Напишите нам</a>
-      </div>
-    </section>
-  </div>
+  </section>
+  <section class="partner-logo">
+    <h2 class="visually-hidden">Ссылки на партнерские сайты</h2>
+    <ul class="partner-logo__list">
+      <li class="partner-logo__item">
+        <a class="partner-logo__link" href="https://htmlacademy.ru/intensive/htmlcss">
+          <img class="partner-logo__pict partner-logo__pict--left-logo" src="img/logo-1.png" width="199" height="68"
+               alt="Сайт HTML Academy">
+        </a>
+      </li>
+      <li class="partner-logo__item">
+        <a class="partner-logo__link" href="#">
+          <img class="partner-logo__pict" src="img/logo-2.png" width="209" height="90"
+               alt="Сайт Barbershop Borodinski">
+        </a>
+      </li>
+      <li class="partner-logo__item">
+        <a class="partner-logo__link" href="#">
+          <img class="partner-logo__pict" src="img/logo-3.png" width="185" height="52" alt="Сайт Pink">
+        </a>
+      </li>
+      <li class="partner-logo__item">
+        <a class="partner-logo__link" href="#">
+          <img class="partner-logo__pict partner-logo__pict--right-logo" src="img/logo-4.png" width="173" height="84"
+               alt="Сайт Mishka">
+        </a>
+      </li>
+    </ul>
+  </section>
 </main>
-<div class="internal-container">
+<section class="contacts">
+  <h2 class="visually-hidden">Как с нами связаться</h2>
+  <div class="container container--contacts">
+    <div class="contacts__requisites">
+      <p class="contacts__subtitle">NЁRDS DESIGN STUDIO</p>
+      <address class="contacts__address-text text--grey">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</address>
+      <p class="contacts__tel-text text--grey">тел.&nbsp;<a class="contacts__tel text--grey"
+                                                            href="tel:+78122757575">+7&nbsp;(812)&nbsp;275-75-75</a></p>
+      <a class="button contacts__button button--red" href="#">Напишите нам</a>
+    </div>
+  </div>
+  <img class="contacts_map" src="img/map.jpg" width="1440" height="416"
+       alt="Адрес дизайн-студии 191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8">
+</section>
+
+<div class="container">
   <footer class="footer">
     <ul class="footer__list">
       <li class="footer__item">
@@ -203,7 +196,7 @@
   </footer>
 </div>
 <!-- Модальное окно при нажатии кнопки "Напишите нам" -->
-<div class="modal-window-container">
+<div class="modal-window-container visually-hidden">
   <section class="modal-writeus">
     <header class="modal-writeus__header">
       <h2 class="modal-writeus__title">Напишите нам</h2>
