--- a/catalog.html
+++ b/catalog.html
@@ -77,7 +77,7 @@
               <li class="filter-form__grid-item">
                 <input class="filter-form__grid-radiobutton visually-hidden" type="radio" name="grid" value="rubber"
                        id="rubber-grid"
-                       aria-label="Резиновая сетка">
+                       aria-label="Резиновая сетка" disabled>
                 <label class="filter-form__grid-label" for="rubber-grid">Резиновая</label>
               </li>
             </ul>
@@ -137,12 +137,12 @@
           </ul>
           <ul class="catalog__sort-updown-list">
             <li class="catalog__sort-updown-item">
-              <input class="catalog__sort-updown-radiobutton visually-hidden" type="radio" name="updown" value="down"
+              <input class="catalog__sort-updown-radiobutton catalog__sort-updown-radiobutton--bottom" type="radio" name="updown" value="down"
                      id="down" checked>
               <label class="catalog__sort-updown-label" for="down"><span class="visually-hidden">Сортировка по убыванию</span></label>
             </li>
             <li class="catalog__sort-updown-item">
-              <input class="catalog__sort-updown-radiobutton visually-hidden" type="radio" name="updown" value="up"
+              <input class="catalog__sort-updown-radiobutton catalog__sort-updown-radiobutton--top" type="radio" name="updown" value="up"
                      id="up">
               <label class="catalog__sort-updown-label" for="up"><span class="visually-hidden">Сортировка по возрастанию</span></label>
             </li>
@@ -171,7 +171,7 @@
               <img class="product-card__img" src="img/img-pink.jpg" width="360" height="576"
                    alt="PINK APP. Продуктовый лендинг приложения для iOS и Android">
               <!-- Всплывающий ценник -->
-              <div class="product-card__pricetag visually-hidden">
+              <div class="product-card__pricetag">
                 <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link" href="#">PINK
                   APP</a></h3>
                 <p class="product-card__pricetag-plain-text text--grey">Продуктовый лендинг приложения для iOS и
@@ -188,7 +188,7 @@
               <img class="product-card__img" src="img/img-barbershop.jpg" width="360" height="576"
                    alt="BARBERSHOP. Сайт салоны красоты. Для мужчин, да.">
               <!-- Всплывающий ценник -->
-              <div class="product-card__pricetag visually-hidden">
+              <div class="product-card__pricetag">
                 <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link" href="#">BARBERSHOP</a>
                 </h3>
                 <p class="product-card__pricetag-plain-text text--grey">Сайт салоны красоты. Для мужчин, да.</p>
@@ -204,7 +204,7 @@
               <img class="product-card__img" src="img/img-mishka.jpg" width="360" height="576"
                    alt="MISHKA. Интернет-магазин вязаных игрушек">
               <!-- Всплывающий ценник -->
-              <div class="product-card__pricetag visually-hidden">
+              <div class="product-card__pricetag">
                 <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link"
                                                             href="#">MISHKA</a></h3>
                 <p class="product-card__pricetag-plain-text text--grey">Интернет-магазин вязаных игрушек</p>
@@ -220,7 +220,7 @@
               <img class="product-card__img" src="img/img-aplus.jpg" width="360" height="576"
                    alt="A PLUS. Лендинг курсов повышения квалификации">
               <!-- Всплывающий ценник -->
-              <div class="product-card__pricetag visually-hidden">
+              <div class="product-card__pricetag">
                 <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link" href="#">A
                   PLUS</a></h3>
                 <p class="product-card__pricetag-plain-text text--grey">Лендинг курсов повышения квалификации</p>
@@ -236,7 +236,7 @@
               <img class="product-card__img" src="img/img-kvast.jpg" width="360" height="576"
                    alt="КВАСТ. Промо-сайт производителя крафтового кваса">
               <!-- Всплывающий ценник -->
-              <div class="product-card__pricetag visually-hidden">
+              <div class="product-card__pricetag">
                 <h3 class="product-card__pricetag-title"><a class="product-card__pricetag-link"
                                                             href="#">КВАСТ</a></h3>
                 <p class="product-card__pricetag-plain-text text--grey">Промо-сайт производителя крафтового кваса</p>
