--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
   </footer>
 </div>
 <!-- Модальное окно при нажатии кнопки "Напишите нам" -->
-<div class="modal-window-container visually-hidden">
+<div class="modal-window-container">
   <section class="modal-writeus">
     <header class="modal-writeus__header">
       <h2 class="modal-writeus__title">Напишите нам</h2>
