--- a/catalog.html
+++ b/catalog.html
@@ -137,14 +137,18 @@
           </ul>
           <ul class="catalog__sort-updown-list">
             <li class="catalog__sort-updown-item">
-              <input class="catalog__sort-updown-radiobutton catalog__sort-updown-radiobutton--bottom visually-hidden" type="radio" name="updown" value="down"
+              <input class="catalog__sort-updown-radiobutton catalog__sort-updown-radiobutton--bottom visually-hidden"
+                     type="radio" name="updown" value="down"
                      id="down" checked>
-              <label class="catalog__sort-updown-label" for="down"><span class="visually-hidden">Сортировка по убыванию</span></label>
+              <label class="catalog__sort-updown-label" for="down"><span
+                class="visually-hidden">Сортировка по убыванию</span></label>
             </li>
             <li class="catalog__sort-updown-item">
-              <input class="catalog__sort-updown-radiobutton catalog__sort-updown-radiobutton--top visually-hidden" type="radio" name="updown" value="up"
+              <input class="catalog__sort-updown-radiobutton catalog__sort-updown-radiobutton--top visually-hidden"
+                     type="radio" name="updown" value="up"
                      id="up">
-              <label class="catalog__sort-updown-label" for="up"><span class="visually-hidden">Сортировка по возрастанию</span></label>
+              <label class="catalog__sort-updown-label" for="up"><span
+                class="visually-hidden">Сортировка по возрастанию</span></label>
             </li>
           </ul>
         </div>
