--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Нёрдс: Учебный проект Голованов А.</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.min.css">
 </head>
 <header class="main-header main-header--bottom-margin">
   <div class="container">
@@ -77,7 +77,7 @@
               <li class="filter-form__grid-item">
                 <input class="filter-form__grid-radiobutton visually-hidden" type="radio" name="grid" value="rubber"
                        id="rubber-grid"
-                       aria-label="Резиновая сетка" disabled>
+                       aria-label="Резиновая сетка">
                 <label class="filter-form__grid-label" for="rubber-grid">Резиновая</label>
               </li>
             </ul>
@@ -94,7 +94,7 @@
               <li class="filter-form__features-item">
                 <input class="filter-form__features-checkbox visually-hidden" type="checkbox" name="advantage"
                        id="advantage-feature"
-                       aria-label="Блок преимуществ" disabled>
+                       aria-label="Блок преимуществ">
                 <label class="filter-form__features-label" for="advantage-feature">Блок преимуществ</label>
               </li>
               <li class="filter-form__features-item">
@@ -300,28 +300,29 @@
   </footer>
 </div>
 <!-- Модальное окно при нажатии кнопки "Напишите нам" -->
-<div class="modal-window-container">
+<div class="modal-window-container visually-hidden">
   <section class="modal-writeus">
     <header class="modal-writeus__header">
       <h2 class="modal-writeus__title">Напишите нам</h2>
       <button class="modal-close-button" type="button" aria-label="Закрыть модальное окно"></button>
     </header>
+    <div class="modal-writeus__form-internal-container">
+      <p class="modal-writeus__form-item">
+        <label class="modal-writeus__label" for="user-name">Ваше имя: </label>
+        <input class="modal-form__input-item" type="text" name="user-name" id="user-name" placeholder="Имя Фамилия"
+               required aria-label="Поле ввода имени">
+      </p>
+      <p class="modal-writeus__form-item">
+        <label class="modal-writeus__label" for="user-email">Ваш e-mail: </label>
+        <input class="modal-form__input-item" type="email" name="user-email" id="user-email"
+               placeholder="email@example.com" required aria-label="Поле ввода email">
+      </p>
+    </div>
+      <label class="modal-writeus__label" for="user-textarea">Текст письма: </label>
+      <textarea class="modal-form__text-area" name="user-letter" id="user-textarea" placeholder="В свободной форме"
+                rows="3" cols="40" aria-label="Поле ввода текста письма"></textarea>
+
     <form class="modal-writeus__form" action="https://echo.htmlacademy.ru" method="post">
-      <div class="modal-writeus__form-internal-container">
-        <p class="modal-writeus__form-item">
-          <label class="modal-writeus__label" for="user-name">Ваше имя: </label>
-          <input class="modal-form__input-item" type="text" name="user-name" id="user-name" placeholder="Имя Фамилия"
-                 required aria-label="Поле ввода имени">
-        </p>
-        <p class="modal-writeus__form-item">
-          <label class="modal-writeus__label" for="user-email">Ваш e-mail: </label>
-          <input class="modal-form__input-item" type="email" name="user-email" id="user-email"
-                 placeholder="email@example.com" required aria-label="Поле ввода email">
-        </p>
-        <label class="modal-writeus__label" for="user-textarea">Текст письма: </label>
-        <textarea class="modal-form__text-area" name="user-letter" id="user-textarea" placeholder="В свободной форме"
-                  rows="3" cols="40" aria-label="Поле ввода текста письма"></textarea>
-      </div>
       <button class="button  modal-writeus__submit-button button--red" type="submit">
         Отправить
       </button>
