Исправлены замечания по базовым критериям. Минимизирован normalize.css

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Нёрдс: Учебный проект Голованов А.</title>
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <header class="main-header main-header--bottom-margin">
