Добавлен JS для модалки и карта

--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Нёрдс: Учебный проект Голованов А.</title>
   <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <header class="main-header main-header--bottom-margin">
   <div class="container">
@@ -276,6 +276,7 @@
         <a class="button contacts__button button--red" href="#">Напишите нам</a>
       </div>
     </div>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afe30110456b386dd3d820a9189c74bfca8139067eb8c2aa761ce36ad18cc8113&amp;width=100%25&amp;height=416&amp;lang=ru_RU&amp;scroll=true"></script>
   </section>
 </main>
 
@@ -329,5 +330,6 @@
     </form>
   </section>
 </div>
+<script src="js/modal.js"></script>
 </body>
 </html>
