--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Нёрдс: Учебный проект Голованов А.</title>
   <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <header class="main-header">
@@ -160,9 +160,10 @@
         <p class="contacts__tel-text text--grey">тел.&nbsp;<a class="contacts__tel text--grey"
                                                               href="tel:+78122757575">+7&nbsp;(812)&nbsp;275-75-75</a>
         </p>
-        <a class="button contacts__button button--red" href="#">Напишите нам</a>
+        <a class="button contacts__button button&#45;&#45;red" href="#">Напишите нам</a>
       </div>
     </div>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Afe30110456b386dd3d820a9189c74bfca8139067eb8c2aa761ce36ad18cc8113&amp;width=100%25&amp;height=416&amp;lang=ru_RU&amp;scroll=true"></script>
   </section>
 </main>
 
@@ -216,5 +217,6 @@
     </form>
   </section>
 </div>
+<script src="js/modal.js"></script>
 </body>
 </html>
